fixed accordion overflow, accordion animation and form animation

--- a/templates/default/less/Services/Accordion/delos.less
+++ b/templates/default/less/Services/Accordion/delos.less
@@ -30,3 +30,7 @@
 	height: 0px;
 	display: none;
 }
+
+.il_VAccordionContentDef > div, .il_HAccordionContentDef > div {
+	overflow: auto;
+}
